# Youtube-Sentiment-MLOps

./: .gitignore  README.md  dvc.yaml  mlflow.db  next.md  params.yaml  pyproject.toml
app/: inference_utils.py  insights_api.py  predict_model.py  test_inference.py
chrome-extension/: manifest.json  popup.css  popup.html  popup.js  youtube_api.js
github/workflows/: ci.yml  cicd.yml
mlartifacts/142693198152574303/models/m-b69b7498d9a6455f907d4eba37e11bf0/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/0/: meta.yaml
models/advanced/: .gitignore  bert_metrics.json  lightgbm_best.pkl  lightgbm_best_hyperparams.pkl  lightgbm_metrics.json  xgboost_best_hyperparams.pkl
models/advanced/evaluation/: lightgbm_evaluation_run.json  lightgbm_test_metrics.json
models/baseline/: .gitignore
references/: folder_structure.txt
reports/docs/: chrome-extension.md  ci_cd_pipeline.md  dvc_mlflow_integration.md  feature_engineering.md  modeling.md
reports/figures/evaluation/: .gitignore
src/data/: download_dataset.py  make_dataset.py
src/features/: feature_engineering.py  imbalance_tuning.py  tfidf_max_features.py  tfidf_vs_bert.py  tfidf_vs_distilbert.py
src/models/: absa_model.py  baseline_logistic.py  bert_training.py  distilbert_training.py  hyperparameter_tuning.py  lightgbm_training.py  model_evaluation.py  register_model.py  xgboost_training.py
src/models/app/: predict_model.py
src/models/helpers/: data_loader.py  train_utils.py
src/utils/: logger.py  mlflow_config.py  paths.py
(+597 files in other folders)
